qt6/spatialaudio/gen_qspatialsound.nim

import Qt6SpatialAudio_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config -cflags Qt6SpatialAudio")
{.compile("gen_qspatialsound.cpp", cflags).}


type QSpatialSoundLoops* = cint
const
  QSpatialSoundInfinite* = -1
  QSpatialSoundOnce* = 1



type QSpatialSoundDistanceModel* = cint
const
  QSpatialSoundLogarithmic* = 0
  QSpatialSoundLinear* = 1
  QSpatialSoundManualAttenuation* = 2



import gen_qspatialsound_types
export gen_qspatialsound_types

import
  gen_qaudioengine,
  gen_qcoreevent,
  gen_qmetaobject,
  gen_qobject,
  gen_qobjectdefs,
  gen_qquaternion,
  gen_qurl,
  gen_qvectornd
export
  gen_qaudioengine,
  gen_qcoreevent,
  gen_qmetaobject,
  gen_qobject,
  gen_qobjectdefs,
  gen_qquaternion,
  gen_qurl,
  gen_qvectornd

type cQSpatialSound*{.exportc: "QSpatialSound", incompleteStruct.} = object

proc fcQSpatialSound_new(engine: pointer): ptr cQSpatialSound {.importc: "QSpatialSound_new".}
proc fcQSpatialSound_metaObject(self: pointer, ): pointer {.importc: "QSpatialSound_metaObject".}
proc fcQSpatialSound_metacast(self: pointer, param1: cstring): pointer {.importc: "QSpatialSound_metacast".}
proc fcQSpatialSound_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QSpatialSound_metacall".}
proc fcQSpatialSound_tr(s: cstring): struct_miqt_string {.importc: "QSpatialSound_tr".}
proc fcQSpatialSound_setSource(self: pointer, url: pointer): void {.importc: "QSpatialSound_setSource".}
proc fcQSpatialSound_source(self: pointer, ): pointer {.importc: "QSpatialSound_source".}
proc fcQSpatialSound_loops(self: pointer, ): cint {.importc: "QSpatialSound_loops".}
proc fcQSpatialSound_setLoops(self: pointer, loops: cint): void {.importc: "QSpatialSound_setLoops".}
proc fcQSpatialSound_autoPlay(self: pointer, ): bool {.importc: "QSpatialSound_autoPlay".}
proc fcQSpatialSound_setAutoPlay(self: pointer, autoPlay: bool): void {.importc: "QSpatialSound_setAutoPlay".}
proc fcQSpatialSound_setPosition(self: pointer, pos: pointer): void {.importc: "QSpatialSound_setPosition".}
proc fcQSpatialSound_position(self: pointer, ): pointer {.importc: "QSpatialSound_position".}
proc fcQSpatialSound_setRotation(self: pointer, q: pointer): void {.importc: "QSpatialSound_setRotation".}
proc fcQSpatialSound_rotation(self: pointer, ): pointer {.importc: "QSpatialSound_rotation".}
proc fcQSpatialSound_setVolume(self: pointer, volume: float32): void {.importc: "QSpatialSound_setVolume".}
proc fcQSpatialSound_volume(self: pointer, ): float32 {.importc: "QSpatialSound_volume".}
proc fcQSpatialSound_setDistanceModel(self: pointer, model: cint): void {.importc: "QSpatialSound_setDistanceModel".}
proc fcQSpatialSound_distanceModel(self: pointer, ): cint {.importc: "QSpatialSound_distanceModel".}
proc fcQSpatialSound_setSize(self: pointer, size: float32): void {.importc: "QSpatialSound_setSize".}
proc fcQSpatialSound_size(self: pointer, ): float32 {.importc: "QSpatialSound_size".}
proc fcQSpatialSound_setDistanceCutoff(self: pointer, cutoff: float32): void {.importc: "QSpatialSound_setDistanceCutoff".}
proc fcQSpatialSound_distanceCutoff(self: pointer, ): float32 {.importc: "QSpatialSound_distanceCutoff".}
proc fcQSpatialSound_setManualAttenuation(self: pointer, attenuation: float32): void {.importc: "QSpatialSound_setManualAttenuation".}
proc fcQSpatialSound_manualAttenuation(self: pointer, ): float32 {.importc: "QSpatialSound_manualAttenuation".}
proc fcQSpatialSound_setOcclusionIntensity(self: pointer, occlusion: float32): void {.importc: "QSpatialSound_setOcclusionIntensity".}
proc fcQSpatialSound_occlusionIntensity(self: pointer, ): float32 {.importc: "QSpatialSound_occlusionIntensity".}
proc fcQSpatialSound_setDirectivity(self: pointer, alpha: float32): void {.importc: "QSpatialSound_setDirectivity".}
proc fcQSpatialSound_directivity(self: pointer, ): float32 {.importc: "QSpatialSound_directivity".}
proc fcQSpatialSound_setDirectivityOrder(self: pointer, alpha: float32): void {.importc: "QSpatialSound_setDirectivityOrder".}
proc fcQSpatialSound_directivityOrder(self: pointer, ): float32 {.importc: "QSpatialSound_directivityOrder".}
proc fcQSpatialSound_setNearFieldGain(self: pointer, gain: float32): void {.importc: "QSpatialSound_setNearFieldGain".}
proc fcQSpatialSound_nearFieldGain(self: pointer, ): float32 {.importc: "QSpatialSound_nearFieldGain".}
proc fcQSpatialSound_engine(self: pointer, ): pointer {.importc: "QSpatialSound_engine".}
proc fcQSpatialSound_sourceChanged(self: pointer, ): void {.importc: "QSpatialSound_sourceChanged".}
proc fQSpatialSound_connect_sourceChanged(self: pointer, slot: int) {.importc: "QSpatialSound_connect_sourceChanged".}
proc fcQSpatialSound_loopsChanged(self: pointer, ): void {.importc: "QSpatialSound_loopsChanged".}
proc fQSpatialSound_connect_loopsChanged(self: pointer, slot: int) {.importc: "QSpatialSound_connect_loopsChanged".}
proc fcQSpatialSound_autoPlayChanged(self: pointer, ): void {.importc: "QSpatialSound_autoPlayChanged".}
proc fQSpatialSound_connect_autoPlayChanged(self: pointer, slot: int) {.importc: "QSpatialSound_connect_autoPlayChanged".}
proc fcQSpatialSound_positionChanged(self: pointer, ): void {.importc: "QSpatialSound_positionChanged".}
proc fQSpatialSound_connect_positionChanged(self: pointer, slot: int) {.importc: "QSpatialSound_connect_positionChanged".}
proc fcQSpatialSound_rotationChanged(self: pointer, ): void {.importc: "QSpatialSound_rotationChanged".}
proc fQSpatialSound_connect_rotationChanged(self: pointer, slot: int) {.importc: "QSpatialSound_connect_rotationChanged".}
proc fcQSpatialSound_volumeChanged(self: pointer, ): void {.importc: "QSpatialSound_volumeChanged".}
proc fQSpatialSound_connect_volumeChanged(self: pointer, slot: int) {.importc: "QSpatialSound_connect_volumeChanged".}
proc fcQSpatialSound_distanceModelChanged(self: pointer, ): void {.importc: "QSpatialSound_distanceModelChanged".}
proc fQSpatialSound_connect_distanceModelChanged(self: pointer, slot: int) {.importc: "QSpatialSound_connect_distanceModelChanged".}
proc fcQSpatialSound_sizeChanged(self: pointer, ): void {.importc: "QSpatialSound_sizeChanged".}
proc fQSpatialSound_connect_sizeChanged(self: pointer, slot: int) {.importc: "QSpatialSound_connect_sizeChanged".}
proc fcQSpatialSound_distanceCutoffChanged(self: pointer, ): void {.importc: "QSpatialSound_distanceCutoffChanged".}
proc fQSpatialSound_connect_distanceCutoffChanged(self: pointer, slot: int) {.importc: "QSpatialSound_connect_distanceCutoffChanged".}
proc fcQSpatialSound_manualAttenuationChanged(self: pointer, ): void {.importc: "QSpatialSound_manualAttenuationChanged".}
proc fQSpatialSound_connect_manualAttenuationChanged(self: pointer, slot: int) {.importc: "QSpatialSound_connect_manualAttenuationChanged".}
proc fcQSpatialSound_occlusionIntensityChanged(self: pointer, ): void {.importc: "QSpatialSound_occlusionIntensityChanged".}
proc fQSpatialSound_connect_occlusionIntensityChanged(self: pointer, slot: int) {.importc: "QSpatialSound_connect_occlusionIntensityChanged".}
proc fcQSpatialSound_directivityChanged(self: pointer, ): void {.importc: "QSpatialSound_directivityChanged".}
proc fQSpatialSound_connect_directivityChanged(self: pointer, slot: int) {.importc: "QSpatialSound_connect_directivityChanged".}
proc fcQSpatialSound_directivityOrderChanged(self: pointer, ): void {.importc: "QSpatialSound_directivityOrderChanged".}
proc fQSpatialSound_connect_directivityOrderChanged(self: pointer, slot: int) {.importc: "QSpatialSound_connect_directivityOrderChanged".}
proc fcQSpatialSound_nearFieldGainChanged(self: pointer, ): void {.importc: "QSpatialSound_nearFieldGainChanged".}
proc fQSpatialSound_connect_nearFieldGainChanged(self: pointer, slot: int) {.importc: "QSpatialSound_connect_nearFieldGainChanged".}
proc fcQSpatialSound_play(self: pointer, ): void {.importc: "QSpatialSound_play".}
proc fcQSpatialSound_pause(self: pointer, ): void {.importc: "QSpatialSound_pause".}
proc fcQSpatialSound_stop(self: pointer, ): void {.importc: "QSpatialSound_stop".}
proc fcQSpatialSound_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QSpatialSound_tr2".}
proc fcQSpatialSound_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QSpatialSound_tr3".}
proc fQSpatialSound_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QSpatialSound_virtualbase_metaObject".}
proc fcQSpatialSound_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QSpatialSound_override_virtual_metaObject".}
proc fQSpatialSound_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QSpatialSound_virtualbase_metacast".}
proc fcQSpatialSound_override_virtual_metacast(self: pointer, slot: int) {.importc: "QSpatialSound_override_virtual_metacast".}
proc fQSpatialSound_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QSpatialSound_virtualbase_metacall".}
proc fcQSpatialSound_override_virtual_metacall(self: pointer, slot: int) {.importc: "QSpatialSound_override_virtual_metacall".}
proc fQSpatialSound_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QSpatialSound_virtualbase_event".}
proc fcQSpatialSound_override_virtual_event(self: pointer, slot: int) {.importc: "QSpatialSound_override_virtual_event".}
proc fQSpatialSound_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QSpatialSound_virtualbase_eventFilter".}
proc fcQSpatialSound_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QSpatialSound_override_virtual_eventFilter".}
proc fQSpatialSound_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QSpatialSound_virtualbase_timerEvent".}
proc fcQSpatialSound_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QSpatialSound_override_virtual_timerEvent".}
proc fQSpatialSound_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QSpatialSound_virtualbase_childEvent".}
proc fcQSpatialSound_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QSpatialSound_override_virtual_childEvent".}
proc fQSpatialSound_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QSpatialSound_virtualbase_customEvent".}
proc fcQSpatialSound_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QSpatialSound_override_virtual_customEvent".}
proc fQSpatialSound_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QSpatialSound_virtualbase_connectNotify".}
proc fcQSpatialSound_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QSpatialSound_override_virtual_connectNotify".}
proc fQSpatialSound_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QSpatialSound_virtualbase_disconnectNotify".}
proc fcQSpatialSound_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QSpatialSound_override_virtual_disconnectNotify".}
proc fcQSpatialSound_staticMetaObject(): pointer {.importc: "QSpatialSound_staticMetaObject".}
proc fcQSpatialSound_delete(self: pointer) {.importc: "QSpatialSound_delete".}


func init*(T: type QSpatialSound, h: ptr cQSpatialSound): QSpatialSound =
  T(h: h)
proc create*(T: type QSpatialSound, engine: gen_qaudioengine.QAudioEngine): QSpatialSound =
